--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
-    rmarkdown
+    xaringan,
+    rmarkdown,
+    magick,
+    pagedown
