--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: xaringanBuilder
 Title: Functions for building xaringan slides as pdfs, pngs, and gifs.
-Version: 0.1.0
+Version: 0.0.1
 Maintainer: John Helveston <john.helveston@gmail.com>
 Author: John Helveston <john.helveston@gmail.com>
 Date: 2020-09-27
@@ -12,7 +12,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-2657-9191")))
 Description: Functions for building xaringan slides as pdfs, pngs, and gifs.
 Depends: R (>= 3.4.0)
-License: GPL-3. A copy of the GNU General Public License, version 3, is available at https://www.r-project.org/Licenses/GPL-3
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
