--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
-    xaringan,
-    rmarkdown,
+    DescTools,
     magick,
-    pagedown
+    pagedown,
+    rmarkdown,
+    xaringan
+
