added xaringan_to_pdf code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,15 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
+    chromote,
     DescTools,
+    digest,
     magick,
     pagedown,
+    pdftools,
+    progress,
+    jsonlite,
     rmarkdown,
     xaringan
-
+Remotes:
+    rstudio/chromote
