--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,15 +19,16 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
-    chromote,
     DescTools,
     digest,
     magick,
     pagedown,
-    pdftools,
     progress,
     jsonlite,
     rmarkdown,
     xaringan
+Suggests:
+    chromote,
+    pdftools
 Remotes:
     rstudio/chromote
