--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(build_all)
 export(build_gif)
 export(build_html)
 export(build_pdf)
+export(build_pptx)
 export(build_thumbnail)
 export(xaringan_to_pdf)
