--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: r
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+
+language: R
 cache: packages
-warnings_are_errors: true
-sudo: required
