added build_png to replace build_thumbnail() to fix part of #15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build_all)
 export(build_gif)
 export(build_html)
 export(build_pdf)
+export(build_png)
 export(build_pptx)
 export(build_social)
 export(build_thumbnail)
