--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: xaringanBuilder
 Title: Functions For Building Xaringan Slides To Different Outputs
-Version: 0.0.5.9000
+Version: 0.0.6.9000
 Authors@R:
     c(person(given = "John",
              family = "Helveston",
@@ -30,7 +30,8 @@ Imports:
     pagedown,
     progress,
     rmarkdown,
-    xaringan
+    xaringan,
+    zip
 Suggests:
     chromote,
     officer,
