--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
     update: true
     sources:
       - sourceline: 'ppa:opencpu/imagemagick'
-      - sourceline: 'add-apt-repository -y ppa:cran/ffmpeg-3'
+      - sourceline: 'ppa:cran/ffmpeg-3'
     packages:
       - libmagick++-dev
       - libpoppler-cpp-dev
