--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -32,6 +32,11 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
+      - name: Install magick dependencies
+        run: |
+          brew install imagemagick
+          brew install ffmpeg
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
