--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: xaringanBuilder
-Title: Functions For Building Xaringan Slides To Different Outputs
+Title: Build 'xaringan' Slides To Many Different Outputs
 Version: 0.0.8.9000
 Authors@R:
     c(person(given = "John",
@@ -15,12 +15,12 @@ Authors@R:
       person(given = "Bryan",
              family = "Shalloway",
              role = "ctb"))
-Description: Functions for building xaringan slides to different outputs, including html, pdf, gif, pptx, and a png "thumbnail" of the first slide.
-Depends: R (>= 3.4.0)
+Description: Functions for building 'xaringan' slides to different outputs,
+    including html, pdf, gif, pptx, and a png "thumbnail" of the first
+    slide.
 License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.1
+Depends: 
+    R (>= 3.4.0)
 Imports:
     cli,
     digest,
@@ -29,8 +29,8 @@ Imports:
     magick (>= 2.7.1),
     pagedown,
     progress,
-    withr,
     rmarkdown,
+    withr,
     xaringan,
     zip
 Suggests:
@@ -38,11 +38,13 @@ Suggests:
     chromote (>= 0.0.0.9003),
     officer,
     pdftools,
-    xaringanExtra,
+    testthat (>= 3.0.0),
     webshot2,
-    testthat (>= 3.0.0)
+    xaringanExtra
 Remotes:
-    rstudio/chromote,
     gadenbuie/xaringanExtra,
+    rstudio/chromote,
     rstudio/webshot2
 Config/testthat/edition: 3
+Encoding: UTF-8
+RoxygenNote: 7.1.1
