updated pkgdown theme

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,16 @@
+url: https://jhelvy.github.io/xaringanBuilder/
+
 home:
   title: Functions For Building Xaringan Slides To Different Outputs.
 
 template:
- params:
-    bootswatch: simplex
-twitter:
-    creator: "@JohnHelveston"
-    card: summary_large_image
+  opengraph:
+    image:
+      src: https://jhelvy.github.io/xaringanBuilder/reference/figures/logo.png
+      alt: "Logo for the xaringanBuilder package"
+    twitter:
+      creator: "@JohnHelveston"
+      card: summary
 
 navbar:
   title: "xaringanBuilder"
