--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ Imports:
 Suggests:
     av,
     chromote (>= 0.0.0.9003),
+    lifecycle,
     officer,
     pdftools,
     testthat (>= 3.0.0),
@@ -47,4 +48,5 @@ Remotes:
     rstudio/webshot2
 Config/testthat/edition: 3
 Encoding: UTF-8
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
+Roxygen: list(markdown = TRUE)
