ci: Install libavfilter-dev on ubuntu

--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -33,6 +33,12 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
+      - if: runner.os == 'ubuntu-latest'
+        run: |
+          sudo add-apt-repository -y ppa:cran/ffmpeg-3
+          sudo apt-get update
+          sudo apt-get install -y libavfilter-dev
+
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
