--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: renderthis
-Title: Render Slides To Different Formats
+Title: Render Slides to Different Formats
 Version: 0.0.9.9000
 Authors@R:
     c(person(given = "John",
